--- a/playgroud.html
+++ b/playgroud.html
@@ -8,11 +8,13 @@
 </head>
 <body>
 
-<h2>CSS Layout Float</h2>
-<p>In this example, we have created a header, two columns/boxes and a footer. On smaller screens, the columns will stack on top of each other.</p>
-<p>Resize the browser window to see the responsive effect (you will learn more about this in our next chapter - HTML Responsive.)</p>
+<div class="myheader">
+<h2 >Come to my baptism, Eve </h2>
+<p> ~ Nelle </p>
+</div>
 
-<header>
+
+<!-- <header>
   <h2>Cities</h2>
 </header>
 
@@ -34,7 +36,7 @@
 
 <footer>
   <p>Footer</p>
-</footer>
+</footer> -->
 
 </body>
 </html>
