--- a/playgroud.html
+++ b/playgroud.html
@@ -9,8 +9,10 @@
 <body>
 
 <div class="myheader">
-<h2 >Come to my baptism, Eve </h2>
+<h2 >You are invited to my baptism, Eve </h2>
+<p> I saved the best seat in the house for you <3 </p>
 <p> ~ Nelle </p>
+<img src="nelle2.png" alt="villanelle" height="50%">
 </div>
 
 
