--- a/playgroud.html
+++ b/playgroud.html
@@ -29,35 +29,44 @@
 
   </div>
   
+  <div class="container2">
+    <div class="block" id="block1"> </div>
+    <div class="block" id="block2"> </div>
+    <div class="block" id="block3"> dfdf</div>
+  </div>
+  
 </div>
 
 
+
+
+
 <script>
-  // Get the modal
-  var modal = document.getElementById("myModal");
+// Get the modal
+var modal = document.getElementById("myModal");
 
-  // Get the button that opens the modal
-  var btn = document.getElementById("myBtn");
+// Get the button that opens the modal
+var btn = document.getElementById("myBtn");
 
-  // Get the <span> element that closes the modal
-  var span = document.getElementsByClassName("close")[0];
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
 
-  // When the user clicks the button, open the modal 
-  btn.onclick = function() {
-    modal.style.display = "block";
-  }
+// When the user clicks the button, open the modal 
+btn.onclick = function() {
+  modal.style.display = "block";
+}
 
-  // When the user clicks on <span> (x), close the modal
-  span.onclick = function() {
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+  if (event.target == modal) {
     modal.style.display = "none";
   }
-
-  // When the user clicks anywhere outside of the modal, close it
-  window.onclick = function(event) {
-    if (event.target == modal) {
-      modal.style.display = "none";
-    }
-  }
+}
 </script>
 <!--
   make a carasel with the images, 'see I've changed'
