--- a/playgroud.html
+++ b/playgroud.html
@@ -30,9 +30,9 @@
   </div>
   
   <div class="container2">
-    <div class="block" id="block1"> </div>
-    <div class="block" id="block2"> </div>
-    <div class="block" id="block3"> dfdf</div>
+    <div class="block" id="block1"> 1</div>
+    <div class="block" id="block2"> 2</div>
+    <div class="block" id="block3"> 3</div>
   </div>
   
 </div>
